--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -8,22 +8,72 @@
   border-radius: 0 0 0.25rem 0.25rem;
 }
 
-.app {
+.sidebar {
+  width: 270px;
+  position: fixed;
+  left: 0;
+  padding-top: 55px;
+  height: 100vh;
+  overflow: hidden;
+  z-index: 9;
+  /* background-color: #343c49; */
+  /* box-shadow: 3px 0 10px rgba(0,0,0,.2); */
+  /* box-shadow: 5px 0 10px rgba(0, 0, 0, 0.2); */
+}
+
+.content {
+  padding-top: 60px;
+}
+
+@media (min-width: 992px) {
+  .content {
+    padding: 60px 30px 0 300px;
+  }
+
+  .sidebar {    
+    transition: transform 300ms, opacity 300ms;
+  }
+}
+
+@media (max-width: 991px) {
+  .sidebar {    
+    transition: transform 300ms, opacity 300ms;
+  }
+
+  .sidebar:not(.toggled) {
+    opacity: 0;
+    transform: translate3d(-100%, 0, 0);
+  }
+
+  .sidebar.toggled {
+    /* box-shadow: 3px 0 10px rgba(0,0,0,.2); */
+    /* box-shadow: 5px 0 10px rgba(0, 0, 0, 0.08); */
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+/*
+*
+INDEX SIDEBAR OLD
+*
+*/
+/* .app {
   overflow-x: hidden;
 }
 
-/* .navbar {
+.navbar {
   height: 55px;
-} */
+}
 
 #sidebar-wrapper {
   min-height: 100vh;
   margin-left: -15rem;
-  /* -webkit-transition: margin 0.3s ease-in-out;
+  -webkit-transition: margin 0.3s ease-in-out;
   -moz-transition: margin 0.3s ease-in-out;
   -o-transition: margin 0.3s ease-in-out;
-  transition: margin 0.3s ease-in-out; */
-  /* https://matthewlein.com/tools/ceaser */
+  transition: margin 0.3s ease-in-out;
+  https://matthewlein.com/tools/ceaser
   -webkit-transition: margin 400ms cubic-bezier(0.550, 0.085, 0.680, 0.530); 
   -moz-transition: margin 400ms cubic-bezier(0.550, 0.085, 0.680, 0.530); 
   -o-transition: margin 400ms cubic-bezier(0.550, 0.085, 0.680, 0.530); 
@@ -31,7 +81,7 @@
 }
 
 #sidebar-wrapper .sidebar-heading {
-  height: 54px;
+  //height: 54px;
   padding: 0.8rem 1.25rem;
   font-size: 1.2rem;
 }
@@ -61,4 +111,4 @@
   #wrapper.toggled #sidebar-wrapper {
     margin-left: -15rem;
   }
-}
+} */
