--- a/styles/custom_landing.css
+++ b/styles/custom_landing.css
@@ -12,17 +12,17 @@
   background-size: cover;
 }
 
-
-
 @media (min-width: 576px) {
   #services {
     /* height: 100vh; */
     height: calc(100vh - 56px);
   }
+
   #contact {
     height: calc(100vh - 72px - 56px);
   }
 }
+
 #contact {
   /* height: 100vh; */
   background: linear-gradient(to bottom,rgba(92,77,66,.95) 0,rgba(92,77,66,.95) 100%), url('../images/contact.jpg');
@@ -32,13 +32,12 @@
   background-size: cover;
 }
 
-
 hr.divider {
   max-width: 3.25rem;
   border-width: 0.2rem;
   border-color: #B58900;
 }
 
-.link-list {
+.unstyled-list {
   list-style: none;
 }
